# socketcan-canbus-plugin

./: .gitignore  .qmake.conf  CMakeLists.txt  README.md  plugin.json  socketcan-canbus-plugin.pro  socketcan.pro  socketcan_starter.sh  vcan0_starter.sh
src/: main.cpp  qcanbus_v2.cpp  qcanbusdevice_v2.cpp  qcanbusdevice_v2.h  qcanbusdevice_v2_p.h  qcanbusdeviceinfo_v2.cpp  qcanbusdeviceinfo_v2.h  qcanbusfactory_v2.cpp  qcanbusfactory_v2.h  qcanbusframe_v2.cpp  qcanbusframe_v2.h  socketcanbackend_v2.cpp  socketcanbackend_v2.h
tests/: CMakeLists.txt  can_test_common.h  longCANsend_test.sh  long_CAN.txt  main.cpp  socketcan_test.pro  write_test.cpp
tests/auto/: qserialbus.pro  tst_qserialbus.cpp
tests/read_qtest/: read_qtest.pro  tst_reader.cpp
tests/read_test/: CMakeLists.txt  main.cpp  read_test.pro
